skillbuilding 1 - finished making a wireframe, inculding media queries. Now it needs style

--- a/skill_buildng_1/index.html
+++ b/skill_buildng_1/index.html
@@ -34,36 +34,39 @@
 
             <!-- !!! SECTION 1 !!! -->  
 			<h2>The Team</h2>
-            <div id="teamSection">
+            <div id="teamSection" class="contentDiv">
+            	<h3>Meet the team</h3>
 
-                <h3>Team Manager - Joani</h3>
+                <h4>Team Manager - Joani</h4>
                     <p>Joani will be responsible to effectively communicate with the client and the team. She will manage workflow, address and solve any problems that may arise, and do her best to meet the needs of the team. Joani’s primary focus is project completion that results in a satisfied client and a team that is proud of their work.</p>
 
-                <h3>Lead Developer - Chris</h3>
+                <h4>Lead Developer - Chris</h4>
                     <p>The lead developer will be focused on the functionality of the site. They are responsible for installing and configuring WordPress plugins, installing and configuring the WordPress theme that the designers choose, creating child themes to edit the main theme. The lead developer will also be responsible for any configurations of the web server or file transfers to the web server. Because we are building a WordPresss site, it's unlikely that we have to write much code. If we do need to write any code, it would be the job of the lead developer.</p>
 
-                <h3>Lead Designer - Mason</h3>
+                <h4>Lead Designer - Mason</h4>
                     <p>Mason will be responsible for working with the development team, and Terri (designer), to help create a clean and professional looking site for the client. He will be there to provide and create ideas for logos, pictures, layout, color schemes, etc, until the team and client is satisfied with everything listed.</p>
 
-                <h3>Junior Designer - Terri</h3>
+                <h4>Junior Designer - Terri</h4>
                     <p>Daniel will assist in the Development of the website. The junior developer will be dedicated to teamwork and maintaining flow. As a junior developer, I will relay suggestions of plugins, themes, and design aspects. The junior developer has little working knowledge of WordPress functions and is working on gaining skills. If there is any need to write code, the junior developer will be able to write the code that is needed. </p>
 
-                <h3>Junior Developer - Daniel</h3>
+                <h4>Junior Developer - Daniel</h4>
                     <p>Terri will be responsible to work with Chris (lead Designer) to create the color schemes, logos and overall design of the websites. She will also analyze and connect digital/ social media in the marketing place for the project. The client may know or not know those resource in her industry. However, the ingredient of the project from front to end that the marketing strategies will be needed to observe and analyze our project research.</p>	
 			 </div><!-- end section 1 -->
 
 			
 			<!-- !!! SECTION 2 !!! -->
             <h2>Purpose and Objectives</h2>
-            <div id="purposeSection">
+            <div id="purposeSection" class="contentDiv">
+            		<h3>Our Purpose</h3>
 					<p>“Team Couve Living” is comprised of five talented students in Clark Colleges CGT 206 Web Design class. Our primary focus is to create and develop a WordPress website for our client. Our aim is to work together cohesively as a team, demonstrating excellence in our ability to meet and exceed course requirements. By the end of the quarter our aim is to present to our client with a high-quality website that reflects our skills, both individually and as a team.</p>
 			</div> <!-- end sectoin 2 -->
 
 			
 			<!-- !!! SECTION 3 !!! -->
             <h2>Strengths and Weaknesses</h2>
-            <div id="strengthsSection">
-			
+            <div id="strengthsSection" class="contentDiv">
+				
+				<h3>Our Team's Stregnths and Weaknesses</h3>
 				<p>Team Couve Living has designers who have experience Mason is very adept in Adobe Illustrator designing logos, or entire layouts. He is equipped with a good sense of color schemes and aesthetics, differing from client to client and project to project. I also have a variety of skills within Adobe Photoshop, dealing with editing pictures, and do photography outside of school. Terri is a skilled artist and applied art designer. She has been doing design logo, DM, flyers, posters, interior design of the freelance for many years. Terri has been doing sketch, drawing, water color, oil painting, and multimedia art over 20 years.</p>
 				<p>Our development team has a strong skillset. Chris has been studying web development at Clark for 2 years, he has taken both the PHP classes, Javascript, SQL, and is currently in the API class. Chris can contribute to the team by writing and interpreting any code we may need to work with. He has also taken the WordPress class. The site he built for the WordPress class had a lot of plugins. Danial has been studying Web Development for 1.5 years. He has taken the JavaScript class and have knowledge of HTML, CSS, and JQuery. Danial is working on understanding how the WordPress development process is done. To gain WordPress experience he is working on building a personal portfolio site and finding books and tutorials</p>
 				<p>We are looking to develop our skills in our given rolls, as well as grow as a team.</p>
@@ -72,7 +75,7 @@
 			
             <!-- !!! SECTION 4 !!! -->
 			<h2>Meeting Structure</h2>
-			<div id="meetingSection">
+			<div id="meetingSection" class="contentDiv">
 				<h3>How our meetings are structured</h3>
 				<p>Team Meeting will be held at the beginning of each class. Our meetings are structured as followed:</p>
 				<p>Joani will provide an outline of each meeting’s agenda</p>
@@ -95,26 +98,30 @@
 
 			<!-- !!! SECTION 5 !!! -->
             <h2>Communication</h2>
-            <div id="communicationSection">
+            <div id="communicationSection" class="contentDiv">
+            		<h3>How We Communicate</h3>
 					<p>Our agreed upon mode of communication is through Slack. Each team member will respond to each other in a timely manner in keeping with our tasks and deadlines.</p>
             </div> <!-- end section 5 -->
 
 			
 			<!-- !!! SECTION 6 !!! -->
             <h2>Decision Making</h2>
-            <div id="decisionSection">
+            <div id="decisionSection" class="contentDiv">
+            		<h3>How We Make Decisions</h3>
 					<p>Our team will engage in equitable discussions and vote on items that have differing opinions.</p>
             </div> <!-- end section 6 -->
 
             <!-- !!! SECTION 7 !!! -->
             <h2>Expectations</h2>
-			<div id="expectationsSection">
+			<div id="expectationsSection" class="contentDiv">
+					<h3>Expectations</h3>
 					<p>All team members should contribute during a face-to-face meeting or communication through Slack. If the team member cannot be there for some reason, they should let the team know the day before, and should check back in for notes on that meeting. As for other communication, especially within teams, members should reply to each message on Slack, ATLEAST letting them know they looked at it.</p>
             </div> <!-- end section 7 -->
 
             <!-- !!! SECTION 8 !!! -->
             <h2>Assessed</h2>
-            <div id="assementSection">
+            <div id="assementSection" class="contentDiv">
+            	<h3>Assessment</h3>
 				<p>All team members should contribute during a face-to-face meeting or communication through Slack. If the team member cannot be there for some reason, they should let the team know the day before, and should check back in for notes on that meeting. As for other communication, especially within teams, members should reply to each message on Slack, ATLEAST letting them know they looked at it.</p>
             </div> <!-- end section 8 -->
 			
